# vaultbox

./: .gitignore  README.md  debug_kdf.go  index.html  package-lock.json  package.json  viewer.html  vite.config.ts
.github/workflows/: build.yml  ci.yml
src/: App.css  App.tsx  ViewerApp.tsx  main.tsx  viewer-main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fuzz/: Cargo.toml
src-tauri/fuzz/fuzz_targets/: crypto.rs  fuzz_content_decrypt.rs  fuzz_content_roundtrip.rs  fuzz_eme.rs  fuzz_filename.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: clipboard.rs  files.rs  mod.rs  vault.rs  webview.rs
src-tauri/src/crypto/: config.rs  content.rs  diriv.rs  eme.rs  filename.rs  kdf.rs  mod.rs  streaming.rs
src-tauri/src/security/: coredump.rs  locked_key.rs  mlock.rs  mod.rs
src-tauri/src/vault/: cache.rs  mod.rs  ops.rs  state.rs
src-tauri/tests/: crypto_pure.rs  debug_kdf.rs  gocryptfs_compat.rs  memory_security.rs  vault_ops.rs
src/components/: Breadcrumb.test.tsx  Breadcrumb.tsx  ContextMenu.tsx  FileInfoPanel.tsx  FileList.tsx  FileTree.tsx  FullscreenViewer.tsx  IsolatedViewerSlot.tsx  Toolbar.tsx  VaultStatusBar.tsx  ViewerPanel.tsx
src/components/dialogs/: ConfirmDialog.test.tsx  ConfirmDialog.tsx  UnlockDialog.tsx
src/components/viewers/: ArchiveViewer.tsx  HexViewer.tsx  ImageViewer.tsx  IsolatedTextEditor.tsx  MediaViewer.tsx  PdfViewer.tsx  TextEditor.tsx
src/hooks/: useAutoLock.ts  useKeyboardShortcuts.ts  useTauriCommands.ts
src/lib/: fileTypes.ts  monacoSetup.ts
src/store/: dialogStore.test.ts  dialogStore.ts  fileStore.ts  vaultStore.test.ts  vaultStore.ts
src/test/: tauri-mock.ts
test-xss/: README.md  evil.html  evil.json  evil.md  evil.txt
