[package]
name = "vaultbox"
version = "1.4.0"
description = "VaultBox - gocryptfs vault browser"
authors = ["you"]
edition = "2021"
default-run = "vaultbox"

[lib]
name = "vaultbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
native = ["eframe", "egui", "egui_extras", "image", "rfd"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri (only used without "native" feature, but always compiled for lib)
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
aes = "0.8"
aes-gcm = "0.10"
scrypt = "0.11"
hkdf = "0.12"
sha2 = "0.10"
cipher = "0.4"

# Memory safety
zeroize = { version = "1", features = ["derive"] }
secrecy = { version = "0.10", features = ["serde"] }

# Utilities
base64 = "0.22"
data-encoding = "2"
rand = "0.9"
thiserror = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
lru = "0.14"
urlencoding = "2"
arboard = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory"] }

# Native UI (optional, enabled with --features native)
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence"], optional = true }
egui = { version = "0.31", optional = true }
egui_extras = { version = "0.31", features = ["image"], optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"], optional = true }
rfd = { version = "0.15", optional = true }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "vaultbox"
path = "src/main.rs"

[[bin]]
name = "vaultbox-native"
path = "src/native_main.rs"
required-features = ["native"]
